# RSSI

./: .gitignore  README.md  make_trimmed_robot_csv.py  rssi_fingerprint_baseline.py  test_rssi.cpp
code/: GO2_GAZEBO_POINTCLOUD_VIEW.md  GO2_MIGRATION.md  GO2_NAV2_INTEGRATION.md  GO2_OFFLINE_MAPPING.md  GO2_PHASE_A_STRAIGHT_LINE.md  GO2_VOXEL_CLOUD_VERIFY.md  PROJECT_PLAN_AB.md  REAL_S_BASELINE.md  RSSI_BASELINE.md  RobotRSSI.code-workspace  robot_s_baseline.py  test_rssi.cpp  unitree_sdk2_go2_imu_logger.patch
code/bt_migrate_pack/: go2_attach_ttyacm.sh  go2_run_rssi.sh  start_coded_scan.sh  test_rssi  test_rssi_auto  test_rssi_manual
code/docker/: go2_foxy_rtabmap.Dockerfile
code/docs/figures/: go2_rssi_system_overview.mmd
code/examples/robot_s_demo/: test.csv  train.csv
code/go2_sdk/: go2_imu_logger.cpp  go2_route_replay.cpp  go2_straight_line_runner.cpp
code/overleaf_projects/overleaf_go2_obstacle_avoidance_tutorial/: README.md  main.tex
code/overleaf_projects/overleaf_multisensor_fusion_go2_tutorial/: README.md  main.tex
code/overleaf_projects/overleaf_nav2_go2_tutorial/: README.md  main.tex
code/overleaf_projects/overleaf_ros2_go2_tutorial/: README.md  main.tex
code/paper_summary_four_papers/: 论文总结.tex
code/ros2_ws/src/go2_nav2_bridge/: CMakeLists.txt  package.xml
code/ros2_ws/src/go2_nav2_bridge/config/: fastdds_udp_only.xml  go2_mapping_bag_qos.yaml
code/ros2_ws/src/go2_nav2_bridge/launch/: go2_nav2_isaac_pointcloud.launch.py  go2_nav2_straight.launch.py  go2_official_rtabmap_mapping.launch.py  go2_perception_rtabmap.launch.py  go2_pointcloud_rviz.launch.py  go2_uslam_mapping_rviz.launch.py  go2_voxel_map_rviz.launch.py  go2_waypoint_obstacle_avoid.launch.py
code/ros2_ws/src/go2_nav2_bridge/params/: go2_nav2_isaac_pointcloud_params.yaml  go2_nav2_minimal_controller_params.yaml  go2_nav2_straight_params.yaml
code/ros2_ws/src/go2_nav2_bridge/rviz/: go2_mapping_rtabmap.rviz  go2_pointcloud.rviz  go2_rtabmap_live.rviz  go2_uslam_mapping.rviz  go2_voxel_map.rviz
code/ros2_ws/src/go2_nav2_bridge/src/: go2_direct_straight_controller.cpp  go2_nav2_bridge.cpp  go2_pose_path_visualizer.cpp  go2_voxel_map_visualizer.cpp  go2_waypoint_follower.cpp  nav2_straight_path_client.cpp
code/ros2_ws/src/rssi_localization/: package.xml  setup.cfg
code/ros2_ws/src/rssi_localization/launch/: localizer.launch.py
code/ros2_ws/src/rssi_localization/rssi_localization/: csv_replay_node.py  rssi_localizer_node.py
code/scripts/: build_go2_offline_voxel_map.py  build_rssi_logger.sh  check_go2_perception_topics.sh  configure_go2_rssi_sudoers.sh  decode_go2_voxel_map.py  diagnose_go2_sdk_runtime.sh  go2_build_offline_voxel_map.sh  go2_capture_voxel_cloud_raw.sh  go2_collect_rssi_imu.sh  go2_collect_straight_line_nav2.sh  go2_collect_straight_line_phase_a.sh  go2_collect_waypoint_obstacle_avoid.sh  go2_decode_voxel_capture.sh  go2_diagnose_nav2_perception.sh  go2_inspect_mapping_bag.sh  go2_nav2_perception_diag.py  go2_official_rtabmap_mapping.sh  go2_offline_rtabmap_from_bag.sh  go2_perception_rtabmap_control_pc.sh  go2_process_route_capture.sh  go2_pull_latest_route_capture.sh  go2_push_replay_route.sh  go2_record_mapping_bag.sh  go2_robot_capture_route_raw.sh  go2_robot_replay_route.sh  go2_uslam_mapping_session.sh  go2_uslam_record_map.sh  go2_uslam_view_map.sh  run_go2_foxy_rtabmap_docker.sh  sync_go2_phase_a.sh
examples/: imu_stream.csv  rssi_raw_stream.csv  rssi_realtime_windows.csv
ros2_ws/src/rssi_localization/: setup.py
ros2_ws/src/rssi_localization/rssi_localization/: __init__.py  core.py
