<?xml version="1.0"?>
<package format="3">
  <name>rssi_localization</name>
  <version>0.0.1</version>
  <description>RSSI path localization package for Unitree integration.</description>
  <maintainer email="dev@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
